# ML-Final-CIFAR-100

./: .env  .gitignore  pyproject.toml
configs/: sweep.yaml  sweep_cnn.yaml  sweep_effnet_b7.yaml  sweep_effnet_b7_sam.yaml  sweep_effnet_l2.yaml  sweep_effnetv2_l.yaml  sweep_effnetv2_m.yaml  sweep_mlp.yaml  sweep_resnet.yaml
src/: configs.py  dataset.py  eval.py  ggdrive.py  optimizer.py  sweep.py  train.py
src/loss_fn/: __init__.py  cross_entropy.py
src/loss_functions/: __init__.py
src/model/: __init__.py  cnn.py  effnet_b7.py  effnet_l2.py  effnetv2_l.py  effnetv2_m.py  mlp.py  resnet.py
src/models/: __init__.py  resnet.py
src/optimizer/: __init__.py  adam.py  base_optimizer.py  sam.py  sgd.py
src/utils/: configs.py  ggdrive.py
tests/: test_dataset.py  test_ggdrive.py
utils/: configs.py
